--- a/views/todos.html
+++ b/views/todos.html
@@ -1,28 +1,37 @@
 {% extends "base.html" %}
 {% block content %}
-  <div class="pt-4">
-    <div class="container align-self-center align-items-center w-75">
-      <div class="row">
-        <div class="col-md-12">
-          <h1 class="py-2">To-Do's</h1>
-        </div>
+<div class="pt-4">
+  <div class="container align-self-center align-items-center w-75">
+    <div class="row">
+      <div class="col-md-12">
+        <h1 class="py-2 text-muted">Your To-Do's</h1>
       </div>
     </div>
   </div>
-  <div class="py-4">
-    <div class="container align-self-center align-items-center w-75">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="list-group">
-            <div class="list-group-item list-group-item-action flex-column align-items-start">
-              <div class="d-flex w-100 justify-content-between">
-                <h5 class="mb-1"></h5>
+</div>
+{% for i in results %}
+<div class="py-4">
+  <div class="container align-self-center align-items-center w-75">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="list-group position-relative">
+          <div class="list-group-item list-group-item-action flex-column align-items-start">
+            <div class="row">
+              <div class="d-flex justify-content-between col-11">
+                <h5 class="mb-2 float-left">{{ i.title }}</h5>
               </div>
-              <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+              <div class="d-flex justify-content-between col-sm-11">
+                <p class="mb-1 float-left">{{ i.description }}</p>
+              </div>
+              <div class="d-flex col-1 align-middle">
+                <a href="/todo/done/{{ i.id }}"><i class="text-danger fas fa-minus-circle fa-lg" data-toggle="tooltip" data-placement="bottom" title="Mark Done"></i></a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
+{% endfor %}
 {% endblock %}
